# EnjoLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ci-gcc.sh  ci-mingw.sh
lib/: CMakeLists.txt  EnjoLib.sln  EnjoLib.vcproj  proj.cbp  run-tests.sh
lib/Ios/: Cin.cpp  Cin.hpp  Cout.cpp  Cout.hpp  Ifstream.cpp  Ifstream.hpp  IoManip.cpp  IoManip.hpp  IosBase.cpp  IosBase.hpp  Isstream.cpp  Isstream.hpp  Istream.cpp  Istream.hpp  Ofstream.cpp  Ofstream.hpp  Osstream.cpp  Osstream.hpp  Ostream.cpp  Ostream.hpp  Sstream.cpp  Sstream.hpp
lib/ML/: CrossValidation.cpp  CrossValidation.hpp  DataSets.cpp  DataSets.hpp
lib/Math/: AxisRescale.cpp  AxisRescale.hpp  AzimuthMath.cpp  AzimuthMath.hpp  Colors.cpp  Colors.hpp  Constants.hpp  FP.cpp  FP.hpp  GeneralMath.cpp  GeneralMath.hpp  GreatCircleAdvMath.cpp  GreatCircleAdvMath.hpp  GreatCircleMath.cpp  GreatCircleMath.hpp  MaxMin.cpp  MaxMin.hpp  MaxMinFind.cpp  MaxMinFind.hpp  MaxMinFindAll.cpp  MaxMinFindAll.hpp  MaxMinFindD.cpp  MaxMinFindD.hpp  MaxMinFindF.cpp  MaxMinFindF.hpp  MaxMinPoint.cpp  MaxMinPoint.hpp  PerlinNoise.cpp  PerlinNoise.hpp  RK4.cpp  RK4.hpp  RK4AccelerationBase.cpp  RK4AccelerationBase.hpp  RandomMath.cpp  RandomMath.hpp  SafeNumber.cpp  SafeNumber.hpp  SimpsonFunctor.cpp  SimpsonFunctor.hpp  SolverQuartic.cpp  (+8 more)
lib/Math/Burkardt/: BrentBurkardt.cpp  BrentBurkardt.hpp  MonicPoly.cpp  MonicPoly.hpp  NelderMeadBurkardt.cpp  NelderMeadBurkardt.hpp  Poly.cpp  Poly.hpp
lib/Math/MultiDimIter/: IMultiDimIterConsumerTpl.cpp  IMultiDimIterConsumerTpl.hpp  MultiDimIterTpl.cpp  MultiDimIterTpl.hpp
lib/Math/Opti/: IOptiAlgo.cpp  IOptiAlgo.hpp  OptiBinSearch.cpp  OptiBinSearch.hpp  OptiBrent.cpp  OptiBrent.hpp  OptiFactory.cpp  OptiFactory.hpp  OptiMultiBinSearch.cpp  OptiMultiBinSearch.hpp  OptiMultiNelderMead.cpp  OptiMultiNelderMead.hpp  OptiMultiSubject.cpp  OptiMultiSubject.hpp  OptiSubject.cpp  OptiSubject.hpp  SelectBestFromBest.cpp  SelectBestFromBest.hpp
lib/Math/Root/: IRootAlgo.hpp  RootBisection.cpp  RootBisection.hpp  RootBrent.cpp  (+4 more)
lib/PID/: DerivatorDiscrete.cpp  DerivatorDiscrete.hpp  IntegratorDiscrete.cpp  IntegratorDiscrete.hpp  PID.cpp  PID.hpp
lib/STD/: Algorithm.cpp  Algorithm.hpp  Fstream.cpp  Fstream.hpp  Iomanip.cpp  Iomanip.hpp  Iostream.cpp  Iostream.hpp  Istream.cpp  Istream.hpp  Map.cpp  Map.hpp  MapPch.hpp  Ostream.cpp  Ostream.hpp  Set.cpp  Set.hpp  Sstream.cpp  Sstream.hpp  StdExcept.cpp  StdExcept.hpp  String.hpp  Tuple.cpp  Tuple.hpp  Utility.hpp  Vector.cpp  Vector.hpp  VectorCpp.cpp  VectorCpp.hpp
lib/Statistical/: Assertions.cpp  Assertions.hpp  Autocorrelation.cpp  Autocorrelation.hpp  Centroid.cpp  Centroid.hpp  Correlation.cpp  Correlation.hpp  Distrib.cpp  Distrib.hpp  EigenAbstract.cpp  EigenAbstract.cpp.orig  EigenAbstract.hpp  EigenAbstract.hpp.orig  EigenFactoryAbstract.cpp  EigenFactoryAbstract.hpp  EigenValueComparator.cpp  EigenValueComparator.hpp  EigenValueVector.cpp  EigenValueVector.hpp  Formatters.cpp  Formatters.hpp  KMeans1d.cpp  KMeans1d.cpp.save  KMeans1d.hpp  KMeans1d.hpp.save  KMeans1dCluster.cpp  KMeans1dCluster.cpp.save  KMeans1dCluster.hpp  KMeans1dCluster.hpp.save  Loss.cpp  Loss.hpp  LossFunctions.cpp  LossFunctions.hpp  Matrix.cpp  Matrix.hpp  MatrixFwd.cpp  MatrixFwd.hpp  MeanWeighted.cpp  MeanWeighted.hpp  (+28 more)
lib/Systems/: Geo.cpp  Geo.hpp  Point.cpp  Point.hpp  RectangleMy.cpp  RectangleMy.hpp  Spherical.cpp  Spherical.hpp  StateVect3.hpp  Systems.hpp  SystemsConverter.cpp  SystemsConverter.hpp  ThreeSphericals.cpp  ThreeSphericals.hpp  Vect3.cpp  Vect3.hpp
lib/Template/: AlgoSTDThin.cpp  AlgoSTDThin.hpp  AlgoVariadic.cpp  AlgoVariadic.hpp  Array.cpp  Array.hpp  ArrayFwd.cpp  ArrayFwd.hpp  BuilderTpl.cpp  BuilderTpl.hpp  CacheCleanupPolFactory.cpp  CacheCleanupPolFactory.hpp  CacheRAM.cpp  CacheRAM.hpp  CacheRAMBare.cpp  CacheRAMBare.hpp  CacheRAMBase.cpp  CacheRAMBase.hpp  CacheRAMCleanupPolBase.cpp  CacheRAMCleanupPolBase.hpp  CacheRAMFunctional.cpp  CacheRAMFunctional.hpp  CacheRAMThreadSafe.cpp  CacheRAMThreadSafe.hpp  CorradePointer.cpp  CorradePointer.h  CorradePointerFwd.h  Factory.cpp  Factory.hpp  IIterable.cpp  IIterable.hpp  IIterableFwd.cpp  IIterableFwd.hpp  IVecT.cpp  IVecT.hpp  IterAdaptStd.cpp  IterAdaptStd.hpp  Iters2.cpp  Iters2.hpp  LoopThreadedTpl.cpp  (+37 more)
lib/Util/: AlgoSTD.cpp  AlgoSTD.hpp  AlgoSTDIVec.cpp  AlgoSTDIVec.hpp  AlgoSTDIVecNumeric.cpp  AlgoSTDIVecNumeric.hpp  AlgoSTDNumeric.cpp  AlgoSTDNumeric.hpp  BaseEmpty.cpp  BaseEmpty.hpp  Bimap.cpp  Bimap.hpp  BimapBase.cpp  BimapBase.hpp  CStr.cpp  CStr.hpp  CalendarGregorian.cpp  CalendarGregorian.hpp  CharManipulations.cpp  CharManipulations.hpp  CharManipulationsTpl.cpp  CharManipulationsTpl.hpp  CharManipulationsTplVec.cpp  CharManipulationsTplVec.hpp  ConcurrentQueueTpl.cpp  ConcurrentQueueTpl.hpp  CoutBuf.cpp  CoutBuf.hpp  EnumClassWrapper.cpp  EnumClassWrapper.hpp  EnumStringMap.cpp  EnumStringMap.hpp  Except.cpp  Except.hpp  FileUtils.cpp  FileUtils.hpp  HtmlGen.cpp  HtmlGen.hpp  IVec.cpp  IVec.hpp  (+83 more)
lib/Visual/: Ascii.cpp  Ascii.hpp  AsciiAnimation.cpp  AsciiAnimation.hpp  AsciiMisc.cpp  AsciiMisc.hpp  AsciiPlot.cpp  AsciiPlot.hpp  Canvas.cpp  Canvas.hpp  CanvasMovableScallable.cpp  CanvasMovableScallable.hpp  ScalePointFunctor.cpp  ScalePointFunctor.hpp
libBoost/: CMakeLists.txt  proj.cbp
libBoost/EnjoLibBoost/: ArraySerialize.cpp  ArraySerialize.hpp  DayOfWeek.cpp  DayOfWeek.hpp  Filesystem.cpp  Filesystem.hpp  KMeans.cpp  KMeans.hpp  KMeansTest.cpp  ProgramOptions.cpp  ProgramOptions.hpp  Serialization.hpp  Zipping.cpp  Zipping.hpp
libStat3rd/: CMakeLists.txt  proj.cbp
libStat3rd/Statistical/: EigenFactory.cpp  EigenFactory.hpp  RegressionFactory.cpp  RegressionFactory.hpp
libwx/: CMakeLists.txt
libwx/src/: ConfigSavesWindow.cpp  ConfigSavesWindow.h  ImageManipulation.hpp  MyChoiceEnum.cpp  MyChoiceEnum.h  MyListCtrlCheckbox.cpp  MyListCtrlCheckbox.h  MyListCtrlTempl.cpp  MyListCtrlTempl.h  MyWxScrolledWindow.cpp  MyWxScrolledWindow.h  UtilWx.cpp  UtilWx.hpp
libwx/unused/: ImageManipulation.cpp
tests/EnjoLibUTest/: CMakeLists.txt  EnjoLibUTest.cbp
(+154 files in other folders)
